@@ -14,8 +14,10 @@
 // along with Heimer. If not, see <http://www.gnu.org/licenses/>.
 
 #include "node_handle.hpp"
+#include "node.hpp"
 
 #include "constants.hpp"
+#include "graphics_factory.hpp"
 #include "layers.hpp"
 
 #include <QPainter>
@@ -27,10 +29,19 @@ NodeHandle::NodeHandle(Node & parentNode, NodeHandle::Role role, int radius)
   , m_radius(radius)
   , m_sizeAnimation(this, "scale")
   , m_opacityAnimation(this, "opacity")
-  , m_size(QSize(m_radius * 2, m_radius * 2))
+  , m_size({ m_radius * 2, m_radius * 2 })
 {
+    setAcceptHoverEvents(true);
+
     m_sizeAnimation.setDuration(Constants::Node::HANDLE_ANIMATION_DURATION);
     m_opacityAnimation.setDuration(Constants::Node::HANDLE_ANIMATION_DURATION);
+
+    m_visibilityTimer.setSingleShot(true);
+    m_visibilityTimer.setInterval(Constants::Node::HANDLE_VISIBILITY_DURATION);
+
+    connect(&m_visibilityTimer, &QTimer::timeout, [=] {
+        setVisible(false);
+    });
 
     QGraphicsItem::setVisible(false);
 
@@ -43,23 +54,48 @@ QRectF NodeHandle::boundingRect() const
     return QRectF(-m_size.width() / 2 - margin, -m_size.height() / 2 - margin, m_size.width() + margin * 2, m_size.height() + margin * 2);
 }
 
+void NodeHandle::hoverEnterEvent(QGraphicsSceneHoverEvent * event)
+{
+    setVisible(true);
+
+    m_visibilityTimer.stop();
+
+    QGraphicsItem::hoverEnterEvent(event);
+}
+
+void NodeHandle::hoverLeaveEvent(QGraphicsSceneHoverEvent * event)
+{
+    m_visibilityTimer.start();
+
+    QGraphicsItem::hoverLeaveEvent(event);
+}
+
+void NodeHandle::hoverMoveEvent(QGraphicsSceneHoverEvent * event)
+{
+    m_visibilityTimer.stop();
+
+    QGraphicsItem::hoverMoveEvent(event);
+}
+
 void NodeHandle::paint(QPainter * painter,
                        const QStyleOptionGraphicsItem * option, QWidget * widget)
 {
     Q_UNUSED(widget)
     Q_UNUSED(option)
 
-    static std::map<Role, QPixmap> pixmapMap = {
+    const std::map<Role, QPixmap> pixmapMap = {
         { Role::Add, QPixmap(":/add.png") },
         { Role::Drag, QPixmap(":/drag.png") },
         { Role::Color, QPixmap(":/colors.png") },
         { Role::TextColor, QPixmap(":/colorsText.png") }
     };
 
-    painter->save();
-    painter->setRenderHint(QPainter::SmoothPixmapTransform);
-    painter->drawPixmap(-m_size.width() / 2, -m_size.height() / 2, m_size.width(), m_size.height(), pixmapMap[role()]);
-    painter->restore();
+    if (pixmapMap.count(role())) {
+        painter->save();
+        painter->setRenderHint(QPainter::SmoothPixmapTransform);
+        painter->drawPixmap(-m_size.width() / 2, -m_size.height() / 2, m_size.width(), m_size.height(), pixmapMap.at(role()));
+        painter->restore();
+    }
 }
 
 Node & NodeHandle::parentNode() const
@@ -77,17 +113,10 @@ NodeHandle::Role NodeHandle::role() const
     return m_role;
 }
 
-bool NodeHandle::containsPoint(const QPointF & pos)
-{
-    const auto r = radius();
-    const auto d = (pos - this->pos());
-    return d.x() * d.x() + d.y() * d.y() < r * r;
-}
-
 void NodeHandle::setVisible(bool visible)
 {
     if (visible) {
-        if (!m_visible) {
+        if (!m_visible && m_parentNode.index() != -1) {
             QGraphicsItem::setVisible(true);
 
             m_visible = true;
@@ -100,6 +129,8 @@ void NodeHandle::setVisible(bool visible)
             m_opacityAnimation.setEndValue(Constants::Node::HANDLE_OPACITY);
             m_opacityAnimation.stop();
             m_opacityAnimation.start();
+
+            m_visibilityTimer.start();
         }
     } else {
         if (m_visible) {
